# libsdldmd

./: .gitignore  CMakeLists.txt
.github/workflows/: libsdldmd.yml
include/SDLDMD/: SDLDMD.h  SDLDMDConfig.h
src/: SDLDMD.cpp  SDLDMDConfig.cpp
